menu: fix wrap

--- a/src/layouts/Header/Menu/Menu.module.scss
+++ b/src/layouts/Header/Menu/Menu.module.scss
@@ -4,6 +4,8 @@
 
     color: var(--grey-500);
 
+    white-space: nowrap;
+
     transition: color 0.3s linear;
 
     &:hover {
